// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination examples > Default pagination with first page selected should render correctly 1`] = `
<div>
  <nav
    aria-label="1 digit pagination"
    role="navigation"
  >
    <ul
      class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
    >
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Go to first page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to previous page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="Page 1"
          class="v-button v-button-tertiary"
        >
          1
        </button>
      </li>
      <li>
        <button
          aria-label="Page 2"
          class="v-button v-button-tertiary"
        >
          2
        </button>
      </li>
      <li>
        <button
          aria-label="Page 3"
          class="v-button v-button-tertiary"
        >
          3
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 4"
          class="v-button v-button-tertiary"
        >
          4
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 5"
          class="v-button v-button-tertiary"
        >
          5
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 6"
          class="v-button v-button-tertiary"
        >
          6
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 7"
          class="v-button v-button-tertiary"
        >
          7
        </button>
      </li>
      <li
        class="v-pagination-overflow v-flex v-align-items-center v-mobile-container-hide"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
          />
        </svg>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 100"
          class="v-button v-button-tertiary"
        >
          100
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Go to last page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples > Default pagination with last page selected should render correctly 1`] = `
<div>
  <nav
    aria-label="1 digit pagination"
    role="navigation"
  >
    <ul
      class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
    >
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Go to first page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to previous page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Page 1"
          class="v-button v-button-tertiary"
        >
          1
        </button>
      </li>
      <li
        class="v-pagination-overflow v-flex v-align-items-center v-mobile-container-hide"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
          />
        </svg>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 96"
          class="v-button v-button-tertiary"
        >
          96
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 97"
          class="v-button v-button-tertiary"
        >
          97
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 98"
          class="v-button v-button-tertiary"
        >
          98
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 99"
          class="v-button v-button-tertiary"
        >
          99
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-current="true"
          aria-label="Page 100"
          class="v-button v-button-tertiary"
        >
          100
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Go to last page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples > Default pagination with middle page selected should render correctly 1`] = `
<div>
  <nav
    aria-label="2 digit pagination"
    role="navigation"
  >
    <ul
      class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
    >
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Go to first page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to previous page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Page 1"
          class="v-button v-button-tertiary v-mobile-container-hide"
        >
          1
        </button>
      </li>
      <li
        class="v-pagination-overflow v-flex v-align-items-center v-mobile-container-hide"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
          />
        </svg>
      </li>
      <li>
        <button
          aria-label="Page 4"
          class="v-button v-button-tertiary"
        >
          4
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="Page 5"
          class="v-button v-button-tertiary"
        >
          5
        </button>
      </li>
      <li>
        <button
          aria-label="Page 6"
          class="v-button v-button-tertiary"
        >
          6
        </button>
      </li>
      <li
        class="v-pagination-overflow v-flex v-align-items-center v-mobile-container-hide"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
          />
        </svg>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 100"
          class="v-button v-button-tertiary"
        >
          100
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Go to last page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples > Default slim pagination should render correctly 1`] = `
<div>
  <nav
    aria-label="pagination"
  >
    <ul
      class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
            />
          </svg>
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-current="true"
          aria-label="Page 1"
          class="v-button v-button-tertiary"
        >
          1
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 2"
          class="v-button v-button-tertiary"
        >
          2
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 3"
          class="v-button v-button-tertiary"
        >
          3
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 4"
          class="v-button v-button-tertiary"
        >
          4
        </button>
      </li>
      <li
        class="v-mobile-container-hide"
      >
        <button
          aria-label="Page 5"
          class="v-button v-button-tertiary"
        >
          5
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples > Pagination for tables should render correctly 1`] = `
<div>
  <div
    class="v-align-items-center v-flex v-flex-row v-flex-wrap-reverse v-gap-10 v-justify-content-between"
  >
    <fieldset
      class="v-align-items-center v-flex v-flex-row v-gap-12"
      style="text-wrap: nowrap;"
    >
      <label
        class="v-label v-flex-shrink-0"
        for="select-items-per-page"
      >
        Items Per Page
      </label>
      <div
        class="v-surface v-input-container"
      >
        <select
          class="v-input"
          id="select-items-per-page"
          name="select-items-per-page"
        >
          <option
            value="10"
          >
            10
          </option>
          <option
            value="20"
          >
            20
          </option>
          <option
            value="50"
          >
            50
          </option>
        </select>
        <div
          class="v-input-control"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </div>
      </div>
      <span
        class="v-input-message"
        id="select-default-message"
      >
        1 - 10 of 100
      </span>
    </fieldset>
    <nav
      aria-label="table pagination"
      role="navigation"
    >
      <ul
        class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
      >
        <li>
          <button
            aria-label="Go to first page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to previous page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="Page 1"
            class="v-button v-button-tertiary"
          >
            1
          </button>
        </li>
        <li>
          <button
            aria-current="false"
            aria-label="Page 2"
            class="v-button v-button-tertiary"
          >
            2
          </button>
        </li>
        <li>
          <button
            aria-current="false"
            aria-label="Page 3"
            class="v-button v-button-tertiary"
          >
            3
          </button>
        </li>
        <li
          class="v-pagination-overflow v-align-items-center v-flex"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
            />
          </svg>
        </li>
        <li>
          <button
            aria-current="false"
            aria-label="Page 10"
            class="v-button v-button-tertiary"
          >
            10
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to last page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Pagination examples > Pagination with controlled state should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-col v-gap-8"
  >
    <div
      class="v-flex v-flex-row v-gap-2"
    >
      <button
        class="v-button"
      >
        Jump to Page 6
      </button>
    </div>
    <nav
      aria-label="controlled page state pagination"
      role="navigation"
    >
      <ul
        class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
      >
        <li>
          <button
            aria-label="Go to first page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to previous page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="Page 1"
            class="v-button v-button-tertiary"
          >
            1
          </button>
        </li>
        <li>
          <button
            aria-current="false"
            aria-label="Page 2"
            class="v-button v-button-tertiary"
          >
            2
          </button>
        </li>
        <li>
          <button
            aria-current="false"
            aria-label="Page 3"
            class="v-button v-button-tertiary"
          >
            3
          </button>
        </li>
        <li
          class="v-pagination-overflow v-align-items-center v-flex"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
            />
          </svg>
        </li>
        <li>
          <button
            aria-current="false"
            aria-label="Page 10"
            class="v-button v-button-tertiary"
          >
            10
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to last page"
            class="v-button v-button-small v-button-tertiary v-button-icon"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Pagination examples > Pagination with minimum and maximum should render correctly 1`] = `
<div>
  <nav
    aria-label="minimum and maximum pagination"
    role="navigation"
  >
    <ul
      class="v-pagination v-flex v-flex-row v-align-items-center v-gap-4"
    >
      <li>
        <button
          aria-label="Go to first page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to previous page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="true"
          aria-label="Page 50"
          class="v-button v-button-tertiary"
        >
          50
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          aria-label="Page 51"
          class="v-button v-button-tertiary"
        >
          51
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          aria-label="Page 52"
          class="v-button v-button-tertiary"
        >
          52
        </button>
      </li>
      <li
        class="v-pagination-overflow v-align-items-center v-flex"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
          />
        </svg>
      </li>
      <li>
        <button
          aria-current="false"
          aria-label="Page 75"
          class="v-button v-button-tertiary"
        >
          75
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to last page"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples > Reusable pagination should render correctly 1`] = `
<div>
  <div>
    <div
      class="v-align-items-center v-flex v-flex-row v-flex-wrap-reverse v-gap-10 v-justify-content-between"
    >
      <fieldset
        class="v-align-items-center v-flex v-flex-row v-flex-wrap v-gap-8"
        style="text-wrap: nowrap;"
      >
        <label
          class="v-typography-label-large v-label v-flex-shrink-0"
          for="test-id-0-select"
        >
          Results per page
        </label>
        <div
          class="v-surface v-input-container"
          style="flex-basis: max-content;"
        >
          <select
            aria-describedby="test-id-0-select-message"
            class="v-input"
            id="test-id-0-select"
            name="test-id-0-select"
          >
            <option
              value="5"
            >
              5
            </option>
            <option
              value="10"
            >
              10
            </option>
            <option
              value="15"
            >
              15
            </option>
            <option
              value="20"
            >
              20
            </option>
          </select>
          <div
            class="v-input-control"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </div>
        </div>
        <span
          class="v-typography-body-2 v-input-message"
          id="test-id-0-select-message"
        >
          1 - 10 of 100
        </span>
      </fieldset>
      <nav
        aria-label="Pagination for table"
        role="navigation"
      >
        <ul
          class="v-pagination v-flex v-flex-row v-align-items-center v-flex v-flex-wrap v-gap-4"
        >
          <li>
            <button
              aria-label="Go to first page"
              class="v-button v-button-small v-button-tertiary v-button-icon"
              disabled=""
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-start v-icon-rtl"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M4 1.00024V15.0002H2V1.00024H4ZM14 2.47583L8.78613 8.00024L14 13.5247L12.6064 15.0002L6 8.00024L12.6064 1.00024L14 2.47583Z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-label="Go to previous page"
              class="v-button v-button-small v-button-tertiary v-button-icon"
              disabled=""
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-left v-icon-rtl"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M12 2.47607L6.78613 8.00049L12 13.5249L10.6064 15.0005L4 8.00049L10.6064 1.00049L12 2.47607Z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-current="true"
              aria-label="Page 1"
              class="v-button v-button-tertiary"
            >
              1
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Page 2"
              class="v-button v-button-tertiary"
            >
              2
            </button>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Page 3"
              class="v-button v-button-tertiary"
            >
              3
            </button>
          </li>
          <li
            class="v-pagination-overflow v-align-items-center v-flex"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-option-horizontal"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1.5 6.5C2.32843 6.5 3 7.17157 3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5ZM8 6.5C8.82843 6.5 9.5 7.17157 9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5ZM14.5 6.5C15.3284 6.5 16 7.17157 16 8C16 8.82843 15.3284 9.5 14.5 9.5C13.6716 9.5 13 8.82843 13 8C13 7.17157 13.6716 6.5 14.5 6.5Z"
              />
            </svg>
          </li>
          <li>
            <button
              aria-current="false"
              aria-label="Page 10"
              class="v-button v-button-tertiary"
            >
              10
            </button>
          </li>
          <li>
            <button
              aria-label="Go to next page"
              class="v-button v-button-small v-button-tertiary v-button-icon"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              aria-label="Go to last page"
              class="v-button v-button-small v-button-tertiary v-button-icon"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-end v-icon-rtl"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M10 8.00024L3.39551 15.0002L2 13.5247L7.20898 8.00024L2 2.47583L3.39551 1.00024L10 8.00024ZM14 1.00024V15.0002H12V1.00024H14Z"
                />
              </svg>
            </button>
          </li>
        </ul>
      </nav>
    </div>
    <div
      style="margin-top: 24px;"
    >
      <details
        class="v-accordion"
        id="test-id-1"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Customize demo
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <form>
            <div
              class="v-flex v-flex-col v-gap-16"
              style="margin-bottom: 32px;"
            >
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-2-input"
                >
                  Total items
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-2-input"
                      type="number"
                      value="100"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-3-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-3-input"
                  >
                    Compact
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-3-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-4-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-4-input"
                  >
                    Disabled
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-4-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-5-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-5-input"
                  >
                    Inline
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-5-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-6-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-6-input"
                  >
                    Show items per page
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-6-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-7-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-7-input"
                  >
                    Show page range
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-7-message"
              />
            </div>
            <div
              class="v-flex v-gap-16"
              style="margin-bottom: 16px;"
            >
              <button
                class="v-button"
                type="submit"
              >
                Apply
              </button>
              <button
                class="v-button v-button-secondary"
                type="button"
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </details>
    </div>
  </div>
</div>
`;
